# dotfiles-promax

./: .gitignore  README.md
configma/env/home/: .bash_aliases  .zshrc
configma/env/home/.cargo/: config.toml
configma/gtk-ga402xu/home/: .gtkrc-2.0
configma/gtk-ga402xu/home/gtk-3.0/: colors.css
configma/kde-ga402xu/home/: .nvidia-settings-rc
configma/kde-ga402xu/home/.config/: Trolltech.conf  bluedevilglobalrc  breezerc  dolphinrc  gtkrc  gtkrc-2.0  kactivitymanagerd-statsrc  kactivitymanagerdrc  kcminputrc  kded5rc  kdeglobals  kglobalshortcutsrc  khotkeysrc  klaunchrc  konsolerc  kscreenlockerrc  ksmserverrc  ktrashrc  kwinrc  kwinrulesrc  mimeapps.list  plasma-org.kde.plasma.desktop-appletsrc  plasmanotifyrc  plasmarc  spectaclerc  (+3 more)
configma/phone/home/: .bash_aliases  .bashrc  .gitconfig  .zshrc
configma/tools/home/: .vimrc
flakes/ai_apps/: flake.nix  less-layers-ModelFile
flakes/apps/: flake.nix  nixvim.nix
flakes/fooocus/: .gitignore  chatdocs.yml  flake.nix
flakes/gaming/: flake.nix  fugl.sh
flakes/ollama/: flake.nix  less-layers-ModelFile
flakes/onedriver/: flake.nix
manual_backups/: FoxyTab_2023-02-16.json  sidebery-data-2024.09.12-17.24.45.json  vimium-options.json
scripts/: bluetooth_detect.py  bluetooth_reconnect.py  flake.nix  librewolf_open_links.py  list_connected_blutooth_devices.py  move_to_next_activity.py  move_window_across_activities.py  viper_shortcut.py
scripts/libwmctl_test/: .gitignore  Cargo.toml  flake.nix
scripts/libwmctl_test/examples/: how_many.rs
scripts/libwmctl_test/src/: until-window-class-detected.rs
(+193 files in other folders)
