[package]
name = "libwmctl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "until-window-class-detected"
path = "src/until-window-class-detected.rs"

[dependencies]
anyhow = "1.0.65"
libwmctl = "0.0.45"
